# tencent-cloud-smartiot-embedded-c

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md
docs/: troubleshooting.md
examples/: CMakeLists.txt
examples/advanced_edition/: CMakeLists.txt  README.md  app_main.c  app_sample_event.c  device_profile.conf.example  iot-product.json  tc_iot_client_config_opts.c  tc_iot_device_config.h  tc_iot_device_logic.c  tc_iot_device_logic.h
examples/scenarios/: CMakeLists.txt
examples/scenarios/light/: CMakeLists.txt  app_main.c  iot-product.json  (+4 more)
include/: tc_iot_compile_flags.h  tc_iot_compile_flags.h.in  tc_iot_config.h  tc_iot_export.h  tc_iot_inc.h
include/common/: tc_iot_const.h  tc_iot_endian.h  tc_iot_http_client.h  tc_iot_http_utils.h  tc_iot_json.h  tc_iot_json_writer.h  tc_iot_log.h  tc_iot_nkv.h  tc_iot_sign_utils.h  tc_iot_sntp.h  tc_iot_string_utils.h  tc_iot_url.h
include/http/: tc_iot_token.h
include/iot/: tc_iot_event.h  tc_iot_shadow.h
include/mqtt/: tc_iot_mqtt.h
include/ota/: tc_iot_ota_download.h
include/platform/: tc_iot_hal_network.h  tc_iot_hal_os.h
src/: CMakeLists.txt
src/common/: CMakeLists.txt  tc_iot_endian.c  tc_iot_http_client.c  tc_iot_http_utils.c  tc_iot_json.c  tc_iot_json_writer.c  tc_iot_log.c  tc_iot_nkv.c  tc_iot_sign_utils.c  tc_iot_sntp.c  tc_iot_string_utils.c  tc_iot_url.c
src/http/: CMakeLists.txt  tc_iot_active_device.c  tc_iot_http_api_active.c  tc_iot_http_api_log.c  tc_iot_http_api_query.c  tc_iot_http_api_token.c  tc_iot_token.c
src/iot/: CMakeLists.txt  tc_iot_event.c  tc_iot_shadow.c  tc_iot_shadow_property.c
src/mqtt/: CMakeLists.txt  tc_iot_mqtt.c
src/ota/: tc_iot_ota_download.c
src/platform/linux/: CMakeLists.txt  tc_iot_hal_log.c  tc_iot_hal_net.c  tc_iot_hal_os.c  tc_iot_hal_os_cfg.c  tc_iot_hal_util.c
tests/: CMakeLists.txt
tests/gtest/: CMakeLists.txt  tc_iot_device_config.h  tc_iot_hal_test.cpp  tc_iot_http_test.cpp  tc_iot_mqtt_test.cpp
tests/gtest/data_template/: tc_iot_device_config.h  tc_iot_device_logic.cpp  tc_iot_shadow_test.cpp  tc_iot_smart_test.cpp
tools/: configure.sh  gen_code.sh  reconfigure.sh  tc_iot_code_generator.py
tools/code_templates/: app_main.c  tc_iot_device_config.h  tc_iot_device_logic.c
tools/cross-compile/: README.md
(+9 files in other folders)
